# Queenside

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
doc/: API.md  USAGE.md  USAGE.txt
src/: Chess.hpp  FENConvertor.hpp  OneOnOne.cpp  OneOnOne.hpp  Server.cpp  Server.hpp  main.cpp  queenside.hpp
src/Client/: Client.cpp  Client.hpp
src/Protocol/: Protocol.cpp  Protocol.hpp
src/Service/GameMaster/: GameMaster.cpp  GameMaster.hpp  Pieces.cpp  Pieces.hpp
src/Singleton/: ASingleton.hpp
src/Singleton/Broadcast/: Broadcast.cpp  Broadcast.hpp  Broadcaster.cpp  Broadcaster.hpp
src/Singleton/Coordinator/: Coordinator.cpp  Coordinator.hpp
src/Singleton/GameSync/: GameSync.cpp  GameSync.hpp
src/Utils/: Strings.hpp  SwitchWithStrings.hpp
src/Utils/IDGenerator/: IDGenerator.cpp  IDGenerator.hpp
