PROJECT					(Babel)
CMAKE_MINIMUM_REQUIRED	(VERSION 2.6)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()

INCLUDE (${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

SET (SERVER_NAME Queenside)

### === SERVER ===

SET (SERVER_PATH src/)
set	(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
INCLUDE_DIRECTORIES	(./${SERVER_PATH})
FILE (GLOB SERVER_FILES ${SERVER_PATH}*.cpp ${SERVER_PATH}*.hpp)
ADD_EXECUTABLE (${SERVER_NAME} ${SERVER_FILES})
FIND_PACKAGE (Boost 1.67.0 REQUIRED)

IF (Boost_FOUND)
	INCLUDE_DIRECTORIES	(${Boost_INCLUDE_DIRS})
	LINK_DIRECTORIES (${Boost_LIBRARY_DIRS} )
ENDIF()

IF (UNIX AND NOT APPLE)
	SET	(UNIX_LIB -lboost_system -lpthread)
ENDIF()

TARGET_LINK_LIBRARIES	(${SERVER_NAME}
	${SERVER_FLAGS}
	${UNIX_LIB}
	${CONAN_LIBS}
)